docker-compose, postgres, nginx add (ver 1.0)

--- a/Megano/Dockerfile
+++ b/Megano/Dockerfile
@@ -9,10 +9,7 @@ ENV PYTHONUNBUFFERED 1
 RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
+COPY . /usr/src/app/
 
-COPY /Megano/ /usr/src/app/
 
-EXPOSE 8000
-RUN python manage.py migrate
-RUN python manage.py loaddata catalog_dump
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
