--- a/Megano/requirements.txt
+++ b/Megano/requirements.txt
@@ -24,3 +24,6 @@ requests-oauthlib==1.3.1
 sqlparse==0.4.3
 tzdata==2022.7
 urllib3==1.26.16
+gunicorn==20.1.0
+celery~=5.2.7
+psycopg2-binary==2.9.5
