--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - media_volume:/usr/src/app/media/
     expose:
       - 8000
+    env_file:
+      - ./.env
     networks:
       - custom
     depends_on:
@@ -19,12 +21,8 @@ services:
     image: postgres:13-alpine
     volumes:
       - ./db_dev/:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=megano
-#    env_file:
-#      - ./.env.dev.db
+    env_file:
+      - ./.env.dev.db
     ports:
       - '5432:5432'
     networks:
